// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrearsDashboard connector mapStateToProps generates canCreateLegalReferral=false when user is SeniorManager 1`] = `
Object {
  "archivedTasksLabels": Object {
    "breadcrumbs": "Closed and cancelled tasks",
    "cancelled": "Cancelled",
    "completed": "Completed",
    "heading": "Closed and cancelled tasks ({count})",
    "reasons": "Reasons for closing",
  },
  "arrearsId": "foo",
  "canCreateLegalReferral": false,
  "heading": "Open Tasks ({count})",
  "isLoading": false,
  "labels": Object {
    "created": "Created",
    "doDate": "Do on",
    "dueDate": "Due by",
    "overdue": "(OVERDUE)",
    "owner": "Owner",
    "reason": "Reason for {reason}",
    "reasons": Object {
      "cancellation": "cancelling",
      "completion": "completing",
      "reassignment": "reassignment",
    },
    "taskCancelButton": "Cancel",
    "taskCompleteButton": "Complete",
    "taskNoButton": "No",
    "taskReassignButton": "Reassign",
    "taskYesButton": "Yes",
    "viewOtherTasks": "View closed and cancelled tasks",
  },
  "legalReferralActionStatus": undefined,
  "legalReferralId": undefined,
  "tasks": Array [
    Object {
      "dueDate": "2018-08-27T15:08:44+00:00",
      "id": "foo",
      "owner": Object {
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "name": "DynamicsAATest Test",
        "type": "systemusers",
      },
      "regardingObjectModel": Object {
        "id": "bar",
        "type": "Arrears",
      },
      "status": "Open",
      "title": "this is a title",
      "type": "manual",
    },
  ],
  "user": Object {
    "profile": Object {
      "createdAt": "2018-01-17T10:31:48.209Z",
      "emailAddress": "mbrownie@test.com",
      "fullname": "Mark Brownie",
      "id": "auth0|5a5f2614de16214961915a31",
      "lastLoginAt": "2018-03-26T11:04:23.262Z",
      "name": "Mark Brownie",
      "patchName": "ABC123",
      "pictureUrl": "https://s.gravatar.com/avatar/b4711b09c3f253d6999f146c91c7d057?s=480&r=pg&d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fmb.png",
      "updatedAt": "2018-03-26T11:04:23.262Z",
      "userIdentities": Object {
        "hasAtLeastOneEmailIdentity": true,
        "hasOnlyEmailIdentities": true,
        "identities": Array [
          Object {
            "connection": "Username-Password-Authentication",
            "isSocial": false,
            "provider": "auth0",
            "userId": "5a5f2614de16214961915a31",
          },
        ],
      },
      "userProfile": Object {
        "assetPartyId": "12345",
        "crmContactId": "71f86a99-03f6-e711-80c5-005056825b41",
        "dateOfBirth": "1995-02-01T00:00:00Z",
        "firstName": "Mark",
        "gender": null,
        "lastName": "Brownie",
      },
    },
    "roles": Array [],
  },
}
`;

exports[`ArrearsDashboard connector mapStateToProps generates the correct props 1`] = `
Object {
  "archivedTasksLabels": Object {
    "breadcrumbs": "Closed and cancelled tasks",
    "cancelled": "Cancelled",
    "completed": "Completed",
    "heading": "Closed and cancelled tasks ({count})",
    "reasons": "Reasons for closing",
  },
  "arrearsId": "foo",
  "canCreateLegalReferral": undefined,
  "heading": "Open Tasks ({count})",
  "isLoading": false,
  "labels": Object {
    "created": "Created",
    "doDate": "Do on",
    "dueDate": "Due by",
    "overdue": "(OVERDUE)",
    "owner": "Owner",
    "reason": "Reason for {reason}",
    "reasons": Object {
      "cancellation": "cancelling",
      "completion": "completing",
      "reassignment": "reassignment",
    },
    "taskCancelButton": "Cancel",
    "taskCompleteButton": "Complete",
    "taskNoButton": "No",
    "taskReassignButton": "Reassign",
    "taskYesButton": "Yes",
    "viewOtherTasks": "View closed and cancelled tasks",
  },
  "legalReferralActionStatus": undefined,
  "legalReferralId": undefined,
  "tasks": Array [
    Object {
      "dueDate": "2018-08-27T15:08:44+00:00",
      "id": "foo",
      "owner": Object {
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "name": "DynamicsAATest Test",
        "type": "systemusers",
      },
      "regardingObjectModel": Object {
        "id": "bar",
        "type": "Arrears",
      },
      "status": "Open",
      "title": "this is a title",
      "type": "manual",
    },
  ],
  "user": Object {
    "profile": Object {
      "createdAt": "2018-01-17T10:31:48.209Z",
      "emailAddress": "mbrownie@test.com",
      "fullname": "Mark Brownie",
      "id": "auth0|5a5f2614de16214961915a31",
      "lastLoginAt": "2018-03-26T11:04:23.262Z",
      "name": "Mark Brownie",
      "patchName": "ABC123",
      "pictureUrl": "https://s.gravatar.com/avatar/b4711b09c3f253d6999f146c91c7d057?s=480&r=pg&d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fmb.png",
      "updatedAt": "2018-03-26T11:04:23.262Z",
      "userIdentities": Object {
        "hasAtLeastOneEmailIdentity": true,
        "hasOnlyEmailIdentities": true,
        "identities": Array [
          Object {
            "connection": "Username-Password-Authentication",
            "isSocial": false,
            "provider": "auth0",
            "userId": "5a5f2614de16214961915a31",
          },
        ],
      },
      "userProfile": Object {
        "assetPartyId": "12345",
        "crmContactId": "71f86a99-03f6-e711-80c5-005056825b41",
        "dateOfBirth": "1995-02-01T00:00:00Z",
        "firstName": "Mark",
        "gender": null,
        "lastName": "Brownie",
      },
    },
    "roles": Array [],
  },
}
`;

exports[`ArrearsDashboard connector mapStateToProps generates the correct props when canCreateLegalReferral is true 1`] = `
Object {
  "archivedTasksLabels": Object {
    "breadcrumbs": "Closed and cancelled tasks",
    "cancelled": "Cancelled",
    "completed": "Completed",
    "heading": "Closed and cancelled tasks ({count})",
    "reasons": "Reasons for closing",
  },
  "arrearsId": "foo",
  "canCreateLegalReferral": true,
  "heading": "Open Tasks ({count})",
  "isLoading": false,
  "labels": Object {
    "created": "Created",
    "doDate": "Do on",
    "dueDate": "Due by",
    "overdue": "(OVERDUE)",
    "owner": "Owner",
    "reason": "Reason for {reason}",
    "reasons": Object {
      "cancellation": "cancelling",
      "completion": "completing",
      "reassignment": "reassignment",
    },
    "taskCancelButton": "Cancel",
    "taskCompleteButton": "Complete",
    "taskNoButton": "No",
    "taskReassignButton": "Reassign",
    "taskYesButton": "Yes",
    "viewOtherTasks": "View closed and cancelled tasks",
  },
  "legalReferralActionStatus": undefined,
  "legalReferralId": undefined,
  "tasks": Array [
    Object {
      "dueDate": "2018-08-27T15:08:44+00:00",
      "id": "foo",
      "owner": Object {
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "name": "DynamicsAATest Test",
        "type": "systemusers",
      },
      "regardingObjectModel": Object {
        "id": "bar",
        "type": "Arrears",
      },
      "status": "Open",
      "title": "this is a title",
      "type": "manual",
    },
  ],
  "user": Object {
    "profile": Object {
      "createdAt": "2018-01-17T10:31:48.209Z",
      "emailAddress": "mbrownie@test.com",
      "fullname": "Mark Brownie",
      "id": "auth0|5a5f2614de16214961915a31",
      "lastLoginAt": "2018-03-26T11:04:23.262Z",
      "name": "Mark Brownie",
      "patchName": "ABC123",
      "pictureUrl": "https://s.gravatar.com/avatar/b4711b09c3f253d6999f146c91c7d057?s=480&r=pg&d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fmb.png",
      "updatedAt": "2018-03-26T11:04:23.262Z",
      "userIdentities": Object {
        "hasAtLeastOneEmailIdentity": true,
        "hasOnlyEmailIdentities": true,
        "identities": Array [
          Object {
            "connection": "Username-Password-Authentication",
            "isSocial": false,
            "provider": "auth0",
            "userId": "5a5f2614de16214961915a31",
          },
        ],
      },
      "userProfile": Object {
        "assetPartyId": "12345",
        "crmContactId": "71f86a99-03f6-e711-80c5-005056825b41",
        "dateOfBirth": "1995-02-01T00:00:00Z",
        "firstName": "Mark",
        "gender": null,
        "lastName": "Brownie",
      },
    },
    "roles": Array [],
  },
}
`;

exports[`ArrearsDashboard connector mergeProps generates the correct props 1`] = `
Object {
  "archivedTasksLabels": Object {
    "breadcrumbs": "Closed and cancelled tasks",
    "cancelled": "Cancelled",
    "completed": "Completed",
    "heading": "Closed and cancelled tasks ({count})",
    "reasons": "Reasons for closing",
  },
  "arrearsId": "foo",
  "bar": "baz",
  "canCreateLegalReferral": undefined,
  "getArrearTasks": [Function],
  "heading": "Open Tasks ({count})",
  "invalidateTasks": [Function],
  "isLoading": false,
  "labels": Object {
    "created": "Created",
    "doDate": "Do on",
    "dueDate": "Due by",
    "overdue": "(OVERDUE)",
    "owner": "Owner",
    "reason": "Reason for {reason}",
    "reasons": Object {
      "cancellation": "cancelling",
      "completion": "completing",
      "reassignment": "reassignment",
    },
    "taskCancelButton": "Cancel",
    "taskCompleteButton": "Complete",
    "taskNoButton": "No",
    "taskReassignButton": "Reassign",
    "taskYesButton": "Yes",
    "viewOtherTasks": "View closed and cancelled tasks",
  },
  "legalReferralActionStatus": undefined,
  "legalReferralId": undefined,
  "match": Object {
    "params": Object {
      "arrearsId": "foo",
    },
  },
  "openTaskModal": [Function],
  "tasks": Array [
    Object {
      "dueDate": "2018-08-27T15:08:44+00:00",
      "id": "foo",
      "owner": Object {
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "name": "DynamicsAATest Test",
        "type": "systemusers",
      },
      "regardingObjectModel": Object {
        "id": "bar",
        "type": "Arrears",
      },
      "status": "Open",
      "title": "this is a title",
      "type": "manual",
    },
  ],
  "user": Object {
    "profile": Object {
      "createdAt": "2018-01-17T10:31:48.209Z",
      "emailAddress": "mbrownie@test.com",
      "fullname": "Mark Brownie",
      "id": "auth0|5a5f2614de16214961915a31",
      "lastLoginAt": "2018-03-26T11:04:23.262Z",
      "name": "Mark Brownie",
      "patchName": "ABC123",
      "pictureUrl": "https://s.gravatar.com/avatar/b4711b09c3f253d6999f146c91c7d057?s=480&r=pg&d=https%3A%2F%2Fcdn.auth0.com%2Favatars%2Fmb.png",
      "updatedAt": "2018-03-26T11:04:23.262Z",
      "userIdentities": Object {
        "hasAtLeastOneEmailIdentity": true,
        "hasOnlyEmailIdentities": true,
        "identities": Array [
          Object {
            "connection": "Username-Password-Authentication",
            "isSocial": false,
            "provider": "auth0",
            "userId": "5a5f2614de16214961915a31",
          },
        ],
      },
      "userProfile": Object {
        "assetPartyId": "12345",
        "crmContactId": "71f86a99-03f6-e711-80c5-005056825b41",
        "dateOfBirth": "1995-02-01T00:00:00Z",
        "firstName": "Mark",
        "gender": null,
        "lastName": "Brownie",
      },
    },
    "roles": Array [],
  },
}
`;
